# SmLM

./: .gitignore  CPP_IMPLEMENTATION_SUMMARY.md  ENHANCED_FEATURES_SUMMARY.md  README.md  STATUS.md  demo_enhanced.sh  inference.py  inference_chat.py  int2_train_test.py  int4_train_test.py  model.graph  model.ngram  prepare.py  prepare_chat.py  program.md  pyproject.toml  report.tex  requirements.txt  results.tsv  run.sh  test_model.slm  tokenizer.json  train.py  train_finetune.py
benchmarks/: __init__.py  runner.py
compressor/: __init__.py  distill.py  export.py  numpy_inference.py  quantize.py  student.py
configs/: minimal-test.yaml  smollm2-100m.yaml  smollm2-180m.yaml  smollm2-30m.yaml  smollm2-60m.yaml
data/: info.json  tokenized.npy
data/chat/: info.json  train_chat.jsonl
engine_cpp/: FEATURES.md  IMPLEMENTATION.md  Makefile  README.md  README_CPP.md  __init__.py  bpe_tokenizer  bpe_tokenizer.cpp  engine  engine.cpp  enhanced_engine  enhanced_engine.cpp  graph_reasoning.h  kv_cache.h  ngram.h  quantize.h  tokenizer  tokenizer.cpp  transformer_engine.cpp
eval/: __init__.py  quality.py
scripts/: benchmark.py  cli.py  export.py  export_to_cpp.py  generate_enhanced_model.py  generate_test_model.py  log_result.py  minimal_test.py  model_card_template.md  quick_start.py  quick_start_cpp.sh  run_experiment.py  setup.sh  smoke_test.py  synthetic_data.py  train.py  view_results.py
spec/: ARCHITECTURE.md  HANDOFF.md  SPEC.md
worker/: __init__.py  queue.py
